# fleaux

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py  fleaux_grammar.pg  fleaux_parser.py  main.py  python_equivalent.py  test.fleaux
cmake/: utilities.cmake
include/fleaux/: fleaux.hpp
source/fleaux/: fleaux.cpp
source/sample/: main.cpp
